[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/UI Elements/Main Menu/mainmenu1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI Elements/Main Menu/mainmenu2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Fonts/ScoreboardFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/UI Elements/Main Menu/Button16.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI Elements/Main Menu/Button15.png" type="Texture" id=6]
[ext_resource path="res://Fonts/sedgwick_co.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sounds/controls (modern 6).ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/quit (modern 8).ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/start (modern 7).ogg" type="AudioStream" id=10]
[ext_resource path="res://Sprites/UI Elements/Main Menu/controlspage.png" type="Texture" id=11]
[ext_resource path="res://Sounds/BGM/日没廃校.mp3" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "MainMenuAnimation"
length = 60.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 0.0 ]
}

[node name="Main Menu" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 538, 180 )
rotation = -6.28319
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 512, 288 )
texture = ExtResource( 1 )

[node name="UI Elements" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -351, 309 )

[node name="Title" type="Label" parent="UI Elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 175.0
margin_top = 71.0
margin_right = 809.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 317, 25 )
custom_fonts/font = ExtResource( 4 )
text = "The First Law"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI Elements"]
margin_left = 389.0
margin_top = 180.0
margin_right = 635.0
margin_bottom = 336.0

[node name="Start Button" type="TextureButton" parent="UI Elements/VBoxContainer"]
margin_left = 23.0
margin_right = 223.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UI Elements/VBoxContainer/Start Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -7.5
margin_right = 123.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 2 )
text = "Start Game"
align = 1
valign = 1

[node name="StartSound" type="AudioStreamPlayer" parent="UI Elements/VBoxContainer/Start Button"]
stream = ExtResource( 10 )

[node name="spacer" type="Panel" parent="UI Elements/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 44.0
margin_right = 246.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 10 )

[node name="Controls Button" type="TextureButton" parent="UI Elements/VBoxContainer"]
margin_left = 23.0
margin_top = 58.0
margin_right = 223.0
margin_bottom = 98.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UI Elements/VBoxContainer/Controls Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -7.5
margin_right = 123.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 2 )
text = "Controls"
align = 1
valign = 1

[node name="ControlsSound" type="AudioStreamPlayer" parent="UI Elements/VBoxContainer/Controls Button"]
stream = ExtResource( 8 )

[node name="spacer2" type="Panel" parent="UI Elements/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 102.0
margin_right = 246.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 10 )

[node name="Quit Button" type="TextureButton" parent="UI Elements/VBoxContainer"]
margin_left = 23.0
margin_top = 116.0
margin_right = 223.0
margin_bottom = 156.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UI Elements/VBoxContainer/Quit Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -7.5
margin_right = 123.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1

[node name="QuitSound" type="AudioStreamPlayer" parent="UI Elements/VBoxContainer/Quit Button"]
stream = ExtResource( 9 )

[node name="ControlsPage" type="TextureRect" parent="."]
visible = false
mouse_filter = 0
texture = ExtResource( 11 )

[node name="Control Page Button" type="TextureButton" parent="ControlsPage"]
margin_left = 805.0
margin_top = 18.0
margin_right = 1005.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="ControlsPage/Control Page Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -7.5
margin_right = 123.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MainMenuAnimation = SubResource( 1 )

[node name="MainMenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
autoplay = true

[connection signal="button_down" from="UI Elements/VBoxContainer/Start Button" to="." method="_on_Start_Button_button_down"]
[connection signal="finished" from="UI Elements/VBoxContainer/Start Button/StartSound" to="." method="_on_StartSound_finished"]
[connection signal="button_down" from="UI Elements/VBoxContainer/Controls Button" to="." method="_on_Controls_Button_button_down"]
[connection signal="button_down" from="UI Elements/VBoxContainer/Quit Button" to="." method="_on_Quit_Button_button_down"]
[connection signal="finished" from="UI Elements/VBoxContainer/Quit Button/QuitSound" to="." method="_on_QuitSound_finished"]
[connection signal="button_down" from="ControlsPage/Control Page Button" to="." method="_on_Control_Page_Button_button_down"]
